--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 @font-face {
-  font-family: 'VCR';
+  font-family: "VCR";
   src: url("./VCR_OSD_MONO_1.001.ttf");
   font-weight: normal;
   font-style: normal;
 }
-
 html {
   background-color: black;
   background-image: url("./images/tile4.png");
@@ -12,11 +11,13 @@ html {
 }
 
 body {
-  font-family: 'VCR', monospace;
+  font-family: "VCR", monospace;
   color: #ebebeb;
   max-width: 32rem;
   margin: auto;
   line-height: 1.2;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #title {
@@ -79,7 +80,7 @@ aside {
 }
 
 aside::before {
-  content: '~ ';
+  content: "~ ";
 }
 
 hr {
@@ -100,4 +101,5 @@ pre {
   font-family: monospace;
   font-size: 14px;
 }
+
 /*# sourceMappingURL=index.css.map */
