--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,8 @@ body {
   max-width: 32rem;
   margin: auto;
   line-height: 1.2;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #title {text-align: center}
