Have headers be all caps

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,10 @@ a:hover, .link:hover {
   font-style: italic;
 }
 
+h1, h2, h3 {
+  text-transform: uppercase;
+}
+
 h2 {
   border-bottom: 2px solid #ebebeb;
 }
