--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,10 @@ a, .link {
 
 a:hover, .link:hover {font-style: italic}
 
+h1, h2, h3 {
+  text-transform: uppercase;
+}
+
 h2 {border-bottom: 2px solid $main}
 
 h3 {
